# EByte_LoRa_E22_micropython_library

./: README.md  setup.cfg  setup.py
examples/: get_configuration.py  receive_all_dictionary_message_in_the_channel.py  receive_dictionary_message.py  receive_string_message.py  send_broadcast_dictionary_message.py  send_fixed_dictionary_message.py  send_fixed_string_message.py  send_transparent_dictionary_message.py  send_transparent_string_message.py  set_configuration.py
micropython/: lora_e22_constants.py
src/: lora_e22.py
