# setup.cfg file at the root directory
[metadata]
name = ebyte-lora-e22
version = 0.0.1
author = Renzo Mischianti
description="MicroPython LoRa EBYTE E22 device library complete and tested with Arduino SAMD, esp8266, esp32, Raspberry, rp2040 and STM32. sx1262/sx1268",
long_description="MicroPython Ebyte E22 LoRa (Long Range) library device very cheap and very long range (from 4Km to 10Km). LoRa EBYTE E22 device library complete and tested with  Arduino SAMD, esp8266, esp32 and STM32. sx1262/sx1268",
url = https://github.com/xreef/EByte_LoRa_E22_micropython_library
keywords = LoRa, UART, EByte, esp32, esp8266, stm32, SAMD, Arduino, Raspberry Pi Pico, rp2040, MicroPython,sx1262, sx1268, e22
[options]
python_requires = >=3.7
# install_requires =
#     pandas
# [options.extras_require]
# test =
#     pytest
#     coverage
[options.package_data]
sample = ['examples/*']
[options.packages.find]
where = src
# [options.entry_points]
# console_scripts =
#     sample=sample:main
# [bdist_wheel]
# universal = 1

